<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/weatherTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_information"
            android:padding="8dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/zipCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/cancel"
            android:hint="@string/ZIP_code"
            android:importantForAutofill="no"
            android:maxLength="5"
            android:inputType="number"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherTextView" />

        <EditText
            android:id="@+id/cityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/cancel"
            android:hint="@string/city"
            android:importantForAutofill="no"
            android:layout_margin="8dp"
            android:inputType="textCapWords"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zipCodeEditText"/>

        <TextView
            android:id="@+id/trafficTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/traffic_information"
            android:padding="8dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityEditText" />

        <EditText
            android:id="@+id/homeAddressEditText"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/cancel"
            android:hint="@string/home_address"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trafficTextView"/>

        <EditText
            android:id="@+id/workSchoolAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/cancel"
            android:hint="@string/work_school_address"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:layout_margin="8dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homeAddressEditText"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workSchoolAddressEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_drawer_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true" />

</androidx.drawerlayout.widget.DrawerLayout>