<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleX="1.75"
        android:scaleY="1.75"
        android:src="@mipmap/ic_launcher_foreground"
        tools:ignore="ContentDescription" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/retryConnectionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:padding="@dimen/buttonPadding"
        android:paddingStart="@dimen/buttonPaddingStartEnd"
        android:paddingEnd="@dimen/buttonPaddingStartEnd"
        android:text="@string/retry_connection"
        android:textSize="@dimen/buttonText"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/authors"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>